--- a/templates/inputform.html
+++ b/templates/inputform.html
@@ -1,13 +1,34 @@
-<h1>SloSummarizer</h1>
-<div>
-    <form method="POST" action="summary">
-        {% csrf_token %}
-        Število povedi: <input name="nus" type="number" value=5><br><br>
-        <textarea name="tts" style="width:50%;height:20%"></textarea><br>
-        <p>Način obnavljanja: <input type="radio" name="method" value="sum" checked> Vsota <input type="radio" name="method" value="average"> Povprečje</p>
-        <button type="submit">OK</button>
-    </form>
-    
+<!DOCTYPE html>
+{% include 'head.html' %} 
 
+<body>
+    <div class="container" style="padding-top:5%">
+            <h1>SloSummarizer</h1>
+            <div>
+                <form method="POST" action="summary">
+                    {% csrf_token %}
+                    Language: <select name="lang" id="lang">
+                        <option value="si">Slovene</option>
+                        <option value="en">English</option>
+                        <option value="rs">Serbian</option>
+                        <option value="it">Italian</option>
+                        <option value="fr">French</option>
+                        <option value="de">German</option>
+                        <option value="es">Spanish</option>
+                        <option value="cz">Czech</option>
+                        <option value="bg">Bulgarian</option>
+                        <option value="ee">Estonian</option>
+                    </select><span style="margin-left:5px; color:gray; font-size: 10px">uses <a target="_blank" href="https://pypi.org/project/Lemmagen/">Lemmagen</a></span><br><br>
+                    Number of sentences: <input name="nus" type="number" style="width:50px;" value=5><br><br>
+                    <textarea placeholder="Place your text here to summarize." name="tts" style="width:50%;height:40%"></textarea><br>
+                    <p>Summarization method: <input type="radio" name="method" checked value="average"> Average  <input type="radio" name="method" value="sum"> Sum</p>
+                    <button class="btn" type="submit">Summarize!</button>
+                </form>
+            </div>
+        </div>
+</body>
+<script>
+    $(function() {
 
-</div>
+    })
+</script>
