--- a/templates/output.html
+++ b/templates/output.html
@@ -1,1 +1,10 @@
-<p style="width: 50%">{{ tts }}</p>
+<!DOCTYPE html>
+{% include 'head.html' %} 
+<body>
+    <div class="container" style="padding-top:10%;">
+            <h4>Summarized text: (shorter by {{ percent }}%)</h4>
+            <p>{{ tts }}</p>
+
+    </div>
+    
+</body>
